Added notebook from Colab

--- a/Space_Debris_Collision_Risk_Assessment.ipynb
+++ b/Space_Debris_Collision_Risk_Assessment.ipynb
@@ -38,7 +38,7 @@
         }
       ],
       "source": [
-        "from skyfield.api import load\n",
+        "from skyfield.api import load'\n",
         "\n",
         "stations_url = 'http://celestrak.com/NORAD/elements/stations.txt'\n",
         "satellites = load.tle_file(stations_url)\n",
@@ -500,12 +500,11 @@
         "import pandas as pd\n",
         "\n",
         "\n",
-        "cdm_df = pd.read_csv('st_23f2001500@ds_study_iitm_ac_in_20250601_463295572.csv')\n",
+        "cdm_df = pd.read_csv('_____') #Upload the required CSV file here!  \n",
         "\n",
         "cdm_df.head()\n",
-        "#first 5 rows\n",
-        "#CDM (Conjunction Data Message) is a standardized NASA format that\n",
-        "#reports predicted close approaches between orbiting space objects, including their collision probability and minimum separation."
+        "\"\"\"CDM (Conjunction Data Message) is a standardized NASA format that\n",
+        "reports predicted close approaches between orbiting space objects, including their collision probability and minimum separation.\"\"\""
       ]
     },
     {
@@ -597,7 +596,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('/content/st_23f2001500@ds_study_iitm_ac_in_20250601_463295572.csv')\n",
+        "df = pd.read_csv('/content/_____.csv') #The name of the CSV file\n",
         "df['CREATED'] = pd.to_datetime(df['CREATED'])\n",
         "df['TCA'] = pd.to_datetime(df['TCA'])\n",
         "\n",
@@ -638,9 +637,9 @@
         "plt.grid(True)\n",
         "plt.show()\n",
         "\n",
-        "#TCA refers to the exact time when two space objects — like satellites or debris — get closest to each other in their predicted paths.\n",
-        "#We visualized the distribution of minimum ranges at the time of closest approach.\n",
-        "#Most potential collisions occur with separation of a few kilometers, but some conjunctions show dangerously low distances — which are the highest risk zones."
+        "\"\"\"TCA refers to the exact time when two space objects — like satellites or debris — get closest to each other in their predicted paths.\n",
+        "We visualized the distribution of minimum ranges at the time of closest approach.\n",
+        "Most potential collisions occur with separation of a few kilometers, but some conjunctions show dangerously low distances — which are the highest risk zones.\"\"\""
       ]
     },
     {
@@ -654,19 +653,7 @@
         "id": "UXWdyykZa83v",
         "outputId": "e8a3eefe-276c-4230-d175-af09957e3d56"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'df' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-f2863288ddd2>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'COLLISION_RISK'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PC'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1e-4\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#COLLISION_RISK.:•      If the Probability of Collision (PC) is greater than 0.0001, it’s marked as risky (1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "df['COLLISION_RISK'] = df['PC'].apply(lambda x: 1 if x > 1e-4 else 0)\n",
         "#COLLISION_RISK.:•\tIf the Probability of Collision (PC) is greater than 0.0001, it’s marked as risky (1)"
